sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__false11/errors.duarouter
Error: Not numerical length definition in lane '1_0'.
Quitting (on error).
